# EthCannes2026

./: .gitignore  Agent.md  CLAUDE.md  Claude.md  README.md  package-lock.json  package.json  run.sh  vitest.config.js
ai-sdk/: README.md  package.json
chainlink/: .gitignore  README.md  commands.md  project.yaml
cli/: Agent.md  CLAUDE.md  README.md  package-lock.json  package.json
contracts/: README.md  compile.ts  deploy.ts  package-lock.json  package.json
demo-packages/: README.md
docs/: .gitignore  DETECTION_RESEARCH.md  FRONTEND_ARCHITECTURE.md  PRODUCTION_FRONTEND_GUIDE.md  PRODUCTION_JAVASCRIPT_GUIDE.md  PRODUCTION_PYTHON_GUIDE.md  PRODUCTION_PYTHON_TESTING_GUIDE.md  architecture-v2.md  npm-supply-chain-attacks-research.md  project-idea.md
engine/: .env.example  .env.template  .env.test.example  .gitignore  Agent.md  CLAUDE.md  Dockerfile.verify  README.md  package-lock.json  package.json  pyproject.toml  run.sh  setup-droplet.sh  smoke_test.py  start.sh  tsconfig.json
engine/src/: audit-log.ts  cleanup.ts  config.ts  events.ts  index.ts  llm.ts  models.ts  pipeline.ts  publish.ts
engine/src/inventory/: checks.ts  classify.ts  parse-manifest.ts
engine/src/investigation/: agent.ts  prompt.ts  tools-execute.ts  tools-read.ts
engine/src/npmguard/: __init__.py  _logging.py  api.py  config.py  exceptions.py  llm.py  main.py  models.py  npm_fetcher.py
engine/src/npmguard/activities/: __init__.py  fuzzing.py  resolve_package.py  sandbox.py  static_analysis.py  verify_proofs.py
engine/src/npmguard/checks/: __init__.py  anti_ai_prompt.py  base.py  build_plugin_exfil.py  clipboard_hijack.py  lifecycle_hook.py  network_exfil.py  telemetry_rat.py  worm_propagation.py
engine/src/npmguard/inventory/: __init__.py  checks.py  classify.py  models.py  parse_manifest.py
engine/src/npmguard/investigation/: __init__.py  activity.py  agent.py  models.py  tools_execute.py  tools_read.py
engine/src/npmguard/sandbox/: __init__.py  controller.py  sanitize.py
engine/src/npmguard/workflows/: __init__.py  orchestrator.py
engine/src/phases/: inventory.ts  investigate.ts  resolve.ts  test-gen-prompt.ts  test-gen.ts  triage.ts  verify.ts
engine/src/sandbox/: controller.ts  docker.ts  instrumentation.ts
engine/tests/: test_0g_integration.py  test_checks.py  test_inventory.py  test_llm.py
engine/tests/helpers/: env.ts  package-fixture.ts
engine/tests/unit/: audit-log.test.ts  config.test.ts  events.test.ts  inventory-checks.test.ts  inventory-classify.test.ts  inventory-parse-manifest.test.ts  investigation-prompt.test.ts  investigation-tools-read.test.ts  models.test.ts  phases-inventory.test.ts  phases-resolve.test.ts  sandbox-instrumentation.test.ts  test-gen-prompt.test.ts
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  run.sh
logs/: 01_resolve.json  02_inventory.json  03_triage.json  04_agent_prompt.md  05_agent_steps.json  10_report.json  (+4 more)
(+262 files in other folders)
