[project]
name = "npmguard-engine"
version = "0.1.0"
description = "Autonomous npm supply chain security auditor engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npmguard"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100
